# PyPlocate

./: .gitignore  README.md  pyproject.toml
asset/test/: test.db
development/: build.sh  generate.sh  push.sh
src/plocate/: __init__.py  binary_reader.py  config.py  constants.py  database.py  directory_data.py  errors.py  export.py  filename_index.py  formatting.py  header.py  indexed_entry.py  indexed_search.py  patterns.py  posting_list.py  search.py  stats.py  trigram_index.py  trigram_patterns.py
src/plocate/entrypoint/: export.py  search.py  stats.py
src/plocate_db/: __init__.py  binary_reader.py  config.py  database.py  errors.py  filename_index.py  formatting.py  header.py  patterns.py  search.py  stats.py
src/plocate_db/cli/: search.py  stats.py
tests/: conftest.py  test_binary_reader.py  test_cli.py  test_config.py  test_database.py  test_directory_data.py  test_export.py  test_filename_index.py  test_formatting.py  test_header.py  test_indexed_search.py  test_patterns.py  test_posting_list.py  test_search.py  test_stats.py
tests/entrypoint/: test_export.py  test_search.py  test_stats.py
tests/support/: fixture_builder.py  index_builder.py  updatedb_fixture.py
