[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plocate2"
version = "0.1.0"
description = "Python library and tools for reading plocate database files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/dsoprea/PyPlocate"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
build = [
    "build",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
pl_stats = "plocate.entrypoint.stats:main"
pl_search = "plocate.entrypoint.search:main"
pl_export = "plocate.entrypoint.export:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plocate"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
